src/objects/TimelineState__c.object
<CustomObject>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project2__c</referenceTo>
        <relationshipLabel>TimelineStates</relationshipLabel>
        <relationshipName>TimelineStates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TimelineStates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>scale__c</fullName>
        <label>scale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>y__c</fullName>
        <label>y</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>TimelineState</label>
    <nameField>
        <label>TimelineState Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TimelineStates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>